# Jarvis.AI

./: .codex_close_probe.err  .codex_close_probe.out  .codex_close_probe.py  .gitignore  ARCHITECTURE.md  CHANGELOG.md  JarvisAI.iss  JarvisAi_Unity.spec  ONE_CLICK_PUBLISH.bat  README.md  TASKS.md  build_release.bat  build_release.ps1  jarvis.py  jarvis.spec  pyproject.toml  requirements.txt  updates.json
app/: __init__.py  app.py  bootstrap.py  main.py
core/: __init__.py  app_identity.py  version.py
docs/: AI_NETWORK.md  APPS_RESOLVER_PASS.md  ARCHITECTURE.md  PRODUCT.md  QA_CHECKLIST.md  RELEASE_20.5.0.md  RELEASE_20.5.5.md  RELEASE_22.0.0.md  RELEASE_22.1.0.md  RELEASE_22.1.1.md  RELEASE_22.2.0.md  RELEASE_22.3.0.md  RELEASE_22.3.5.md  RELEASE_22.4.0.md  RELEASE_22.4.1.md  RELEASE_22.4.2.md  RELEASE_22.4.5.md  RELEASE_22.4.6.md  RELEASE_22.5.0.md  RELEASE_22.5.1.md  RELEASE_22.5.5.md  RELEASE_READINESS.md  SECURITY.md  UI_BLUEPRINT.md
jarvis_ai/: __init__.py  action_catalog.py  action_permissions.py  app_composition.py  app_context.py  audio_devices.py  audio_runtime.py  bootstrap.py  brain_router.py  branding.py  commands.py  controllers.py  custom_actions.py  custom_actions_store.py  diagnostics.py  effects.py  environment_doctor.py  guide_noobs.py  profile_tools.py  readiness.py  release_checks.py  release_lock.py  release_meta.py  reminders.py  response_parsing.py  runtime.py  runtime_activity.py  runtime_activity_filters.py  runtime_brain.py  runtime_dry_run.py  runtime_inline_status.py  runtime_recovery.py  runtime_shell.py  runtime_system_ui.py  (+17 more)
(+197 files in other folders)
