[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvisai-unity"
version = "22.1.0"
description = "JarvisAi Unity desktop assistant rebuilt from scratch with PySide6 and Qt Quick."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4.0,<3",
  "PySide6==6.11.0",
  "pillow>=12.2.0,<13",
  "openai>=2.30.0,<3",
  "httpx>=0.28.1,<0.29",
  "sounddevice>=0.5.5,<0.6",
  "vosk>=0.3.45,<0.4",
  "pyttsx3>=2.99,<3",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.19.0,<7",
  "pytest>=9.0.0,<10",
  "ruff>=0.15.0,<0.16",
]

[tool.setuptools]
packages = [
  "app",
  "core",
  "core.actions",
  "core.ai",
  "core.intent",
  "core.models",
  "core.pc_control",
  "core.reminders",
  "core.registration",
  "core.routing",
  "core.services",
  "core.settings",
  "core.state",
  "core.telegram",
  "core.updates",
  "core.voice",
  "ui",
  "ui.bridge",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
